data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1710.wast
;; 1. **Test Description**: Execute a `br_if` instruction within a `block` where the condition is zero. Validate that the execution continues within the block without branching.

(assert_invalid
  (module (func $conditional_branch_within_block (block (br_if 0 (i32.const 0) (i32.const 1))))
  "type mismatch"
)